--- a/Formales/IDP Antrag/netforms.sty
+++ b/Formales/IDP Antrag/netforms.sty
@@ -1,5 +1,6 @@
 \RequirePackage{url}
 \RequirePackage{totcount}
+\RequirePackage{tikz}
 
 \pagestyle{empty}
 
@@ -41,6 +42,7 @@
 \def\thetitlegerman{}
 \def\thethemensteller{}
 \def\thestudiengang{}
+\def\themail{}
 \def\netforms@type{}
 \def\type@bachelor{bachelor}
 \def\type@master{master}
@@ -64,25 +66,25 @@
 % ----------------------------------------------------------------------------
 \DeclareDocumentCommand{\thetype}{}{%
 	\ifx\type@bachelor\netforms@type%
-		Bachelor
+		Bachelor%
 	\fi%
 	\ifx\type@master\netforms@type%
-		Master
+		Master%
 	\fi%
 	\ifx\type@diplom\netforms@type%
-		Diplom
+		Diplom%
 	\fi%
 	\ifx\type@idp\netforms@type%
-		IDP
+		IDP%
 	\fi%
 	\ifx\type@gr\netforms@type%
-		Guided Research
+		Guided Research%
 	\fi%
 	\ifx\type@hiwi\netforms@type%
-		HiWi
+		HiWi%
 	\fi%
 	\ifx\type@other\netforms@type%
-		\type@other@name
+		\type@other@name%
 	\fi%
 }
 \DeclareDocumentCommand{\type}{O{Other} m}{%
@@ -122,6 +124,7 @@
 \DeclareDocumentCommand{\nachname}{m}{\def\thenachname{#1}}
 \DeclareDocumentCommand{\matrikel}{m}{\def\thematrikel{#1}}
 \DeclareDocumentCommand{\studiengang}{m}{\def\thestudiengang{#1}}
+\DeclareDocumentCommand{\mail}{m}{\def\themail{#1}}
 \DeclareDocumentCommand{\semester}{m m}{%
 	\def\thesemester{#1}
 	\def\thecurrentsemester{#2}
@@ -228,17 +231,17 @@
 \newcommand\thesisheader{%
 \begin{minipage}{.2\textwidth}%
 	\centering
-	\INlogo{height=1.2cm,color=TUMDarkerBlue}%
+	\INlogo{height=1cm,color=TUMDarkerBlue}%
 \end{minipage}%
 \begin{minipage}{.6\textwidth}%
 	\centering
-	\huge\textsc{FAKULT\"AT F\"UR INFORMATIK}\large\\[-.2ex]
-	\textsc{DER TECHNISCHEN UNIVERSI\"AT M\"UNCHEN}\\[2ex]
+	\huge\textsc{FAKULT\"AT F\"UR INFORMATIK}\normalsize\\[-.2ex]
+	\textsc{\large DER TECHNISCHEN UNIVERSIT\"AT M\"UNCHEN}\\[2ex]
 	\textsc{PR\"UFUNGSAUSSCHUSS}
 \end{minipage}%
 \begin{minipage}{.2\textwidth}%
 	\centering
-	\TUMlogo{shape=outline,height=1.5cm,color=TUMDarkerBlue}%
+	\TUMlogo{shape=outline,height=1.2cm,color=TUMDarkerBlue}%
 \end{minipage}\\[1ex]
 \hrule
 }
@@ -249,7 +252,7 @@
 % ----------------------------------------------------------------------------
 \DeclareDocumentCommand{\thesisinfo}{}{%
 \vskip2ex
-\begin{tikzpicture}[yscale=.9]
+\begin{tikzpicture}[yscale=.75]
 	\node[right] (x) at (0,0) {Name:};
 	\node[box,text width=5.5cm] at ($(x.west)+(3,0)$)
 		{\thenachname};
@@ -267,7 +270,7 @@
 		{\thesemester};
 
 	\node[right] (x) at (0,-4.75) {Studienadresse:};
-	\node[box,text width=8.5cm,minimum height=2cm] (addr)
+	\node[box,text width=8cm,minimum height=1.8cm] (addr)
 		at ($(x.west)+(3,0)$) {%
 		\thestudienstrasse%
 		\ifx\studien@appartment\@empty\else%
@@ -281,14 +284,14 @@
 		};
 	% make it really tight
 	\node[right,text width=1cm] at ($(addr.east)-(0.1,0)$) {Tel./\\Mobil:};
-	\node[box,text width=3.5cm] at
-		($(addr.east)+(1.3,.67)$) {\thestudientelefon};
-	\node[box,text width=3.5cm] at
-		($(addr.east)+(1.3,-.67)$) {\thestudienmobiltelefon};
+	\node[box,text width=3.3cm] at
+		($(addr.east)+(1.2,.67)$) {\thestudientelefon};
+	\node[box,text width=3.3cm] at
+		($(addr.east)+(1.2,-.67)$) {\thestudienmobiltelefon};
 
 	\node[right,text width=2.8cm] (x) at (0,-7.25)
 		{Heimatadresse\\(falls\\abweichend):};
-	\node[box,text width=8.5cm,minimum height=2cm] (addr)
+	\node[box,text width=8cm,minimum height=1.8cm] (addr)
 		at ($(x.west)+(3,0)$) {%
 		\theheimatstrasse%
 		\ifx\heimat@appartment\@empty\else%
@@ -302,10 +305,14 @@
 		};
 	% make it really tight
 	\node[right,text width=1cm] at ($(addr.east)-(0.1,0)$) {Tel./\\Mobil:};
-	\node[box,text width=3.7cm] at
-		($(addr.east)+(1.3,.67)$) {\theheimattelefon};
-	\node[box,text width=3.7cm] at
-		($(addr.east)+(1.3,-.67)$) {\theheimatmobiltelefon};
+	\node[box,text width=3.3cm] at
+		($(addr.east)+(1.2,.67)$) {\theheimattelefon};
+	\node[box,text width=3.3cm] at
+		($(addr.east)+(1.2,-.67)$) {\theheimatmobiltelefon};
+
+    \node[right, text width=2.8cm] (x) at (0,-9)
+        {E-Mail-Adresse};
+    \node[box,text width=8cm] (mail) at ($(x.west)+(3,0)$) {\themail};
 \end{tikzpicture}\\[-1.5ex]
 \hrule
 }
@@ -350,13 +357,9 @@ Thema (deutsch \textbf{und} englisch):
 		{\thethemensteller};
 
 	\node[right] (x) at (x.east) {Betreuer/in(nen):};
-	\foreach \y in {1,2,...,\thebetreuercount} {%
+	\foreach \y in {1,2,3} {%
 		\node[box,text width=5cm] at ($(x.west)+(3,-.875*\y+.875)$) {\thebetreuer[\y]};
 	}
-%	\node[box,text width=5cm] at ($(x.west)+(3,-.85)$)
-%		{\cmdnetforms@student@betreuerb};
-%	\node[box,text width=5cm] at ($(x.west)+(3,-1.7)$)
-%		{\cmdnetforms@student@betreuerc};
 
 	\node[right] (x) at (0,-1.7) {Beginn:};
 	\node[right] (x) at ($(x.west)+(3,0)$) {15.};
@@ -369,7 +372,7 @@ Thema (deutsch \textbf{und} englisch):
 	\node[box,text width=4.5cm] (x) at ($(x.west)+(3,0)$) {};
 \end{tikzpicture}\\[-1.5ex]
 
-\vskip3ex
+\vskip4ex
 \begin{minipage}[t]{.49\textwidth}
 \hrule
 \vskip2mm
@@ -382,9 +385,9 @@ Thema (deutsch \textbf{und} englisch):
 (Unterschrift Bearbeiter/in)
 \end{minipage}
 
-\vskip2ex
+\vskip4ex
 Dieses Formblatt ist im Einvernehmen mit Themensteller/-in Betreuer/-in
-auszuf\"ullen und sp\"atestens 8 Tage vor Begin der Bachelor-Arbeit an den
+auszuf\"ullen und sp\"atestens 8 Tage vor Beginn der Bachelor-Arbeit an den
 Pr\"ufungsausschauss (Frau Apfelbeck, SBS-IN) zu senden.
 }
 % ----------------------------------------------------------------------------
@@ -442,4 +445,3 @@ Garching bei M\"unchen, den \rule[-1mm]{3.7cm}{.5pt}
 
 \DeclareDocumentCommand{\netforms@aufnahme@content}{}{%
 }
-
