--- a/Formales/IDP Antrag/studentdefs.tex
+++ b/Formales/IDP Antrag/studentdefs.tex
@@ -1,4 +1,3 @@
-\RequirePackage{netcommon}
 
 % Alle Konfigurationsbefehle sind optional. Fehlende Befehle fueheren einfach
 % zu "blank forms".
@@ -21,6 +20,7 @@
 \heimattelefon{}{--}
 \studienadresse{strasse}{plz stadt}
 \heimatadresse[adresszusatz=,appartment=]{}{}
+\mail{student@tum.de}
 
 % Informationen ueber die Arbeit. Sollte selbsterklaerend sein.
 \themensteller{\NEThead}
