removed transparency from png

--- a/Formales/IDP Antrag/idp.tex
+++ b/Formales/IDP Antrag/idp.tex
@@ -450,9 +450,10 @@ Um eine optimale Hardwarezusammensetzung zu erreichen, die möglichst gut mit de
 Aus Abbildung \ref{fig:hardware} lässt sich eine bildliche Darstellung des Zusammenspiels der verschiedenen Bestandteile entnehmen. 
 
 \begin{figure}
-\begin{align}
+%\begin{align}
+\centering
 \includegraphics[scale=1.5]{images/Inkscape.png}
-\end{align}
+%\end{align}
 \caption{Funktionsübersicht der Hardwarebestandteile}\label{fig:hardware}
 \end{figure}
 %\begin{figure}[!b]\hfill
