title, advisors, dates

--- a/Formales/IDP Antrag/idp.tex
+++ b/Formales/IDP Antrag/idp.tex
@@ -121,17 +121,17 @@
 \makeatother
 
 \anwendungsfach{Elektrotechnik}
-\title{Insert title here}{Titel hier eintragen}
+\title{Entwicklung eines Demonstrators für ein drahtloses cyber-physisches Netzwerk}{Development of a Demonstrator for a Wireless Cyber-Physical Network}
 \supervisor{Prof.~Dr.-Ing.~Georg~Carle}
-\assistants{Sebastian Gallenmüller, XXX}
+\assistants{Sebastian Gallenmüller, Stephan Günther, Maurice Leclaire}
 \anzahlbearbeiter{2}
 \idplecture{EI0632}{Mesch-Maschine-Kommunikation 1}{Prof.~Dr.-Ing.~Rigoll}{5}
 \idplecturesum{5}
 \idpects{5}{8}{2}{1}
 \idpbearbeiteri{03659717}{Basargin}{Nikita}{1}
 \idpbearbeiterii{03648422}{Tran}{Dao Thuy Ngan}{2}
-\idpstart{XX.XX.XXXX}
-\idpend{XX.XX.XXXX}
+\idpstart{01.10.2017}
+\idpend{31.03.2018}
 
 \begin{document}
 	\begin{minipage}{.2\textwidth}%
@@ -424,15 +424,12 @@
 
 % title
 \begin{center}
-	\vspace*{1cm}
+	\vspace*{5mm}
 	\textbf{Beschreibung des Interdisziplinären Projekts}%
 
 	\Large%
-	%TODO ask Sebastian
-	\textbf{Insert title of IDP}%
+	\textbf{\thetitlegerman}%
 \end{center}
-
-\vskip3ex
 
 
 
