--- a/Formales/IDP Antrag/studentdefs.tex
+++ b/Formales/IDP Antrag/studentdefs.tex
@@ -27,7 +27,7 @@
 \beginn{04}{2016}
 \endt{08}{2016}
 \betreuer{Stephan G\"unther, Maurice Leclaire}
-\title{titleenglish}{titlegerman}
+\title{Development of a Demonstrator for a Wireless Cyber-Physical Network}{Entwicklung eines Demonstrators für ein drahtloses cyber-physisches Netzwerk}
 \studiengang{Informatik}
 
 
